ajuste de espaços no menu

--- a/index.html
+++ b/index.html
@@ -13,8 +13,32 @@
     <title>Tech News</title>
   </head>
   <body>
-    <h1>teste</h1>
-    <h2>subtest</h2>
-    <a href="#">Link</a>
+    <header class="container">
+      <nav id="primary" class="grid grid-flow-col">
+        <div>
+          <img src="assets/icons/List.svg" alt="icone de menu" />
+          <strong>Menu</strong>
+        </div>
+        <div>
+          <img src="assets/icons/Logo.svg" alt="Tech News logo" />
+        </div>
+        <div>
+          <strong>Buscar</strong>
+          <img
+            src="assets/icons/MagnifyingGlass.svg"
+            alt="icone de lupa para pesquisa"
+          />
+        </div>
+      </nav>
+      <nav id="secondary" class="grid grid-flow-col">
+        <a href="">Inteligência Artificial</a>
+        <a href="">Blockchain</a>
+        <a href="">Hologramas</a>
+        <a href="">Internet</a>
+        <a href="">Vestíveis</a>
+        <a href="">Realidade Aumentada</a>
+        <a href="">Realidade Virtual</a>
+      </nav>
+    </header>
   </body>
 </html>
