--- a/index.html
+++ b/index.html
@@ -40,5 +40,53 @@
         <a href="">Realidade Virtual</a>
       </nav>
     </header>
+
+    <main class="grid container">
+      <section id="featured" class="grid grid-flow-col gap-16">
+        <figure class="card">
+          <img
+            src="./assets/img/Portal de notícias (Community)/Image 01.png"
+            alt="imagem de um robo"
+          />
+          <figcaption>
+            <span class="content-tag">Robótica</span>
+            <h2 class="text-2xl">
+              Robôs domésticos começam a ser adotados para tarefas diárias,
+              prometendo mais conforto e eficiência nas residências.
+            </h2>
+          </figcaption>
+        </figure>
+
+        <div class="grid grid-cols-2 gap-16">
+          <div>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 02.png"
+              alt=""
+            />
+          </div>
+
+          <div>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 03.png"
+              alt=""
+            />
+          </div>
+
+          <div>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 04.png"
+              alt=""
+            />
+          </div>
+
+          <div>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 05.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
