--- a/index.html
+++ b/index.html
@@ -57,34 +57,121 @@
           </figcaption>
         </figure>
 
-        <div class="grid grid-cols-2 gap-16">
-          <div>
+        <figure class="grid grid-cols-2 gap-16">
+          <figure class="card">
             <img
               src="./assets/img/Portal de notícias (Community)/Image 02.png"
               alt=""
             />
-          </div>
+            <figcaption>
+              <span class="content-tag">Hologramas</span>
+              <h2 class="text-lg">
+                Novo Smartphone Projetor 3D chega ao mercado, transformando a
+                forma como vemos nossas telas!
+              </h2>
+            </figcaption>
+          </figure>
 
-          <div>
+          <figure class="card">
             <img
               src="./assets/img/Portal de notícias (Community)/Image 03.png"
               alt=""
             />
-          </div>
+            <figcaption>
+              <span class="content-tag">INTERNET</span>
+              <h2 class="text-lg">
+                Tecnologia 6G chega às metrópoles brasileiras, prometendo
+                revolucionar a forma como vivemos e nos...
+              </h2>
+            </figcaption>
+          </figure>
 
-          <div>
+          <figure class="card">
             <img
               src="./assets/img/Portal de notícias (Community)/Image 04.png"
               alt=""
             />
-          </div>
+            <figcaption>
+              <span class="content-tag">VESTÍVEIS</span>
+              <h2 class="text-lg">
+                Empresa lança relógio inteligente capaz de monitorar a saúde
+                mental, oferecendo insights valiosos para o...
+              </h2>
+            </figcaption>
+          </figure>
 
-          <div>
+          <figure class="card">
             <img
               src="./assets/img/Portal de notícias (Community)/Image 05.png"
               alt=""
             />
-          </div>
+            <figcaption>
+              <span class="content-tag">REALIDADE VIRTUAL</span>
+              <h2 class="text-lg">
+                Escolas adotam a tecnologia VR para proporcionar experiências
+                imersivas, transformando a aprendizagem trad...
+              </h2>
+            </figcaption>
+          </figure>
+        </figure>
+      </section>
+
+      <section id="weekly">
+        <header class="grid grid-flow-col">
+          <h3>Mais lidas da semana</h3>
+          <a href="#" class="grid grid-flow-col">
+            <strong>Ver tudo</strong>
+            <span></span>
+          </a>
+        </header>
+        <div class="grid gap-16">
+          <figure>
+            <span class="content-tag">VEÍCULOS</span>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 06.png"
+              alt=""
+            />
+            <p>
+              Protótipo de veículo voador é apresentado, marcando o início da
+              era dos transportes aéreos pessoa...
+            </p>
+          </figure>
+
+          <figure>
+            <span class="content-tag">HOLOGRAMAS</span>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 07.png"
+              alt=""
+            />
+            <p>
+              Plataforma de videoconferência apresenta nova função de
+              hologramas, tornando as chamadas...
+            </p>
+          </figure>
+
+          <figure>
+            <span class="content-tag">REALIDADE VIRTUAL</span>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 08.png"
+              alt=""
+            />
+            <p>
+              Nova geração de consoles de videogame é lançada, trazendo gráficos
+              ultra-realistas e experiên...
+            </p>
+          </figure>
+
+          <figure>
+            <span class="content-tag">INTERNET</span>
+            <img
+              src="./assets/img/Portal de notícias (Community)/Image 09.png"
+              alt=""
+            />
+            <p>
+              Projeto busca oferecer internet de alta velocidade em áreas
+              remotas através de satélites.
+            </p>
+          </figure>
         </div>
       </section>
     </main>
