--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           />
         </div>
       </nav>
-      <nav id="secondary" class="grid grid-flow-col">
+      <nav id="secondary" class="grid grid-flow-col menu">
         <a href="">Inteligência Artificial</a>
         <a href="">Blockchain</a>
         <a href="">Hologramas</a>
